--- a/knjiga.css
+++ b/knjiga.css
@@ -10,6 +10,12 @@ PRVA SEKCIJA: Početna
 .mimaarbid-naslovna header {
   display: none;
 }
+.mimaarbid-naslovna {
+  background-image: url('slike/pozadina.png');
+  background-size: cover;
+  height: 49.2vw;
+  display: flex;
+}
 .navigation-bar {
   display: flex;
   justify-content: flex-end;
@@ -147,7 +153,7 @@ TREĆA SEKCIJA: Umetnički blok
   margin-top: -0.0001%;
 }
 /* 
-ASIDE: Slika-text 
+ASIDE: slika-planina (text)
 ------------------------------------------------------------ */
 .slika-text {
   background-color: #f2f2f2;
@@ -187,57 +193,79 @@ PETA SEKCIJA: Umetnički-Blok 3
   font-size: 1.62vw;
 }
 /* 
-ŠESTA SEKCIJA: Knjige  
+ASIDE: Knjige  
 -------------------------------*/
 .knjige {
+  display: flex;
+  flex-direction: column;
   background-color: #f2f2f2;
-  padding:10px 0;
+  color: #3d6877;
+  padding: 30px 105px 5px;
   font-size: 1.9vw;
-  margin-top: -22px;
+  margin-top: -4%;
+  font-family: "Monsterrat";
+}
+.knjige-izdanja {
+  display: flex;
+  justify-content: space-between;
+  margin-top: -3.5%;
+  margin-left: -1.5%;
+}
+.knjige-izdanja  {
+  font-size: 2.3vw;
 }
 /* 
-SEDMA SEKCIJA: Mima-lično 
+ASIDE: Mima-lično 
 -------------------------------*/
 .mima-lično {
+  position: relative;
+  width: 100%;
   float: left;
-  align-items: flex-end;
-  margin-top: 5%;
-  position: static;
-  margin-left: 5%;
+  margin-top: 1.7%;
 }
 .mima-lično img {
-  width: 24%;
+  width: 27%;
+  margin-left: 8%;
   height: auto;
 }
 .mima-lično img:last-of-type {
-  margin-left: 1.5%;
-  width:25%;
+  width: 23%;
+  margin-left: 2%;
+  margin-bottom: -2.5%;
   height: auto;
-  margin-bottom: -3.2%;
 }
  .mima-text {
-  margin-top: 3.2%;
   position: absolute;
-  left: 34%;
+  top: -5%;
+  left: 45%;
   color: #3d6877;
   line-height: 126%;
 } 
-.mima-text pre {
-  position: absolute;
-  left: 32%;
-  font-size: 1.6vw;
+.mima-text p {
+  width: 88%;
+  font-size: 1.56vw;
   color: #3d6877;
-  line-height: 126%;
+  line-height: 120%;
   font-family: "Marion", serif;
 }
 #mima-potpis {
-  position: relative;
   font-family: "Sacramento";
   font-size: 2.5vw;
   text-align: right;
-  top: 16vw;
-  left: 52vw;
+}
+/* ASIDE: About */
+#mimaabout {
+  position: relative;
+  top: 0px;
+  clear: both;
+}
+.mimaarbid {
+  font-size: 1.9vw;
+  font-family: "Monsterrat";
+  padding: 30px;
+  background-color: #f2f2f2;
   color: #3d6877;
+  padding: 5px 105px;
 }
 /* 
 FOOTER 
@@ -368,7 +396,7 @@ footer {
     text-align: center;
     font-family: "Wingdings 2";
   }
-  /* SEDMA SEKCIJA: Mima-lično  */
+  /* ASIDE: Mima-lično  */
   .mima-text {
     margin-top: 3%;
     left: 28%;
@@ -485,12 +513,12 @@ footer {
 /* Prelazak sa Flex-Row na Flex-Column u sedmoj sekciji (max-width 900px) */
 
 @media screen and (max-width: 900px) {
-  /* ASIDE: Slika-text */
+  /* ASIDE: slika-planina (text) */
   .slika-text {
     font-size: 1.1em;
   }
-  /* SEDMA SEKCIJA: Mima-lično */
-  .mima-lično {
+  /* ASIDE: Mima-lično */
+  /*.mima-lično {
     position: relative;
     display: flex;
     flex-direction: column-reverse;
@@ -530,7 +558,7 @@ footer {
     left: 44%;
     top: 170px;
     width: 43%;
-  }
+  }*/
   /* FOOTER */
   footer {
     top: 50px;
@@ -624,7 +652,7 @@ footer {
     width: 100%;
     margin-top: 10px;
   }
-  /* ASIDE: Slika-text */
+   /* ASIDE: slika-planina (text) */
   .slika-text {
     background-color: transparent;
   }
@@ -650,7 +678,7 @@ footer {
     line-height: 3.4vw;
     padding: 35px 40px 0;
   }
-  /* ASIDE: Slika-text */
+   /* ASIDE: slika-planina (text) */
   .slika-text {
     width: 100%;
     font-size: 1em;
@@ -720,7 +748,7 @@ footer {
     line-height: 4.4vw;
     padding: 35px 24px 0;
   }
-   /* ASIDE: Slika-text */
+  /* ASIDE: slika-planina (text) */
   .slika-text  p {
     width: 90%;
     margin-bottom: 0;
@@ -768,7 +796,7 @@ footer {
     font-size: 4.85vw;
     line-height: 5.3vw;
   }
-   /* ASIDE: Slika-text */
+  /* ASIDE: slika-planina (text) */
    .slika-text  p {
     width: 95%;
   }
