--- a/knjiga.css
+++ b/knjiga.css
@@ -178,8 +178,7 @@ PETA SEKCIJA: Umetnički-Blok 3
   background-color: #3d6877;
   margin-top: -45px;
   color: white;
-  padding-bottom: 20px;
-  padding-top: 20px;
+  padding: 20px 0 50px;
 }
 .slika-planina img {
   width: 85%;
@@ -189,7 +188,7 @@ PETA SEKCIJA: Umetnički-Blok 3
 }
 .slika-planina p {
   margin-left: 7.8%;
-  padding-bottom: 2%;
+  padding-bottom: 20px;
   font-size: 1.62vw;
 }
 /* 
